tests/lean/4117.lean.expected.out
4117.lean:2:0: error: unexpected end of input; expected ')'
