tests/lean/4117.lean
structure D:=(t:A)(c N:={s with} 0
